--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <meta name="author" content="">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!-- TODO: Cargar CSS Bootstrap (no es necesario el JS) -->
     </head>
 
     <body>
 
-        <h1 id="autor">Autor: TU NOMBRE AQUÍ</h1>
+        <h1 id="autor">Autor: Ainhoa Izquierdo</h1>
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
@@ -22,13 +23,34 @@
                - Para cada item: (https://vuejs.org/v2/guide/index.html#Conditionals-and-Loops)
                  - Crear un componente item-data
             -->
-
+            <div class="jumbotron">
+                <h1 class="display-4" id="title">{{ title }}</h1>
+              </div>
+              <div class="container">
+                <div class="row" style="margin-left: 1rem;">
+                     <div class="col-xs-12" v-for="item in col.collection.items" :key="item.id">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                                 <dl v-for="data in item.data">
+                                    <dt>{{ data.prompt }}</dt>
+                                    <dd>{{ data.value }}</dd>
+                                </dl>
+                                <a :href=item.href class="btn btn-primary">Ver</a> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
 
         <!-- Plantilla para el componente edit-form -->
         <script type="text/x-template" id="editForm">
+
+            <div>
+                <button @click="editar">{{editar}}</button>
+            </div>
 
             <!--
                  TODO: Componente edit-form
@@ -40,7 +62,8 @@
 
         <!-- Plantilla para el componente item-data -->
         <script type="text/x-template" id="itemData">
-
+            
+             
             <!--
                  TODO: Componente item-data
             -->
@@ -49,7 +72,8 @@
 
 
         <!-- TODO: Cargar librería VueJS y archivo js/script.js -->
-
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="js/script.js"></script>
     </body>
 
 </html>
