--- a/index.html
+++ b/index.html
@@ -24,21 +24,17 @@
                  - Crear un componente item-data
             -->
             <div class="jumbotron">
-                <h1 class="display-4" id="title">{{ title }}</h1>
+                <h1 class="display-4" id="title">{{ col.collection.title }}</h1>
               </div>
               <div class="container">
                 <div class="row" style="margin-left: 1rem;">
-                     <div class="col-xs-12" v-for="item in col.collection.items" :key="item.id">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
+                            <div class="card-group">
                                 <item-data v-for="item in item" :item="item"></item-data>
                             </div>               
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
 
 
         <!-- Plantilla para el componente edit-form -->
@@ -72,7 +68,7 @@
             </div>
             <div class="card-body" v-show="edicion">
                 <dl v-for="data in item.data">
-                    <dd>{{ data.prompt }}</dd> 
+                    <dt>{{ data.prompt }}</dt> 
                     <input v-if="data.prompt != description" type="text" v-model="data.value">
                     <textarea v-else v-model="data.value" type="text"></textarea>
                 </dl>
